Revision history for Plack-Middleware-Statsd

{{$NEXT}}

v0.8.0    2025-05-13 13:07:16+01:00 Europe/London
  [Security]
  - Stats for request methods are only counted for ASCII words, anything else is counted as "other".

  - Stats for content types are only counted for well-formed types.

  [Documentation]
  - Added a security policy.

  - Added a How to Contribute document

  - Removed redundant heading.

  - Updated copyright year.

v0.7.1    2024-07-20 12:52:04+01:00 Europe/London
  [Documentation]
  - Updated copyright year,

  [Tests]
  - Updated author tests.

v0.7.0    2024-07-13 12:51:37+01:00 Europe/London
  [Enhancements]
  - Code was adapted to use newer syntax features.

  [Incompatible Changes]
  - Bumped minimum version of Perl to v5.20.

v0.6.3    2023-06-15 19:45:18+01:00 Europe/London
  [Enhancements]
  - Revert to using Try::Tiny instead of Feature::Compat::Try, since the former is already used by Plack.

  [Documentation]
  - Reformated KNOWN ISSUES section.

  - Clarified support policy for older Perl versions.

  - Bumped copyright year.

v0.6.2    2022-12-11 16:07:04+00:00 Europe/London
  [Enhancements]
  - Simplified code for tracking Content-Type headers.

  [Documentation]
  - Documented support for older Perl versions.

  - Fixed typo.

  - Added note about psgix.informational callback.

  [Other]
  - Removed redundant import.

  - Added GitHub Actions to run tests.

  [Tests]
  - Added missing author prereq for Test::Vars.

v0.6.1    2022-09-02 16:05:17+01:00 Europe/London
  [Other]
  - Signed distribution.

v0.6.0    2022-07-26 16:50:26+01:00 Europe/London
  [Incompatable Changes]
  - Minimum Perl version is v5.14.

  [Enhancements]
  - Use Feature::Compat::Try instead of Try::Tiny to catch errors.

  [Documentation]
  - Bump copyright year.

  - Fixed encoding of links in README.

  [Toolchain]
  - Updated MANIFEST.SKIP.

v0.5.1    2021-07-03 14:08:05+01:00 Europe/London
  [Documentation]