@@ -46,6 +46,7 @@ Module::Metadata = 1.000015
 [Prereqs / DevelopRequires ]
 -phase = develop
 -relationship = requires
+Test::MixedScripts = 0
 Test::Vars = 0.015
 Software::Security::Policy::Individual = 0.10
 
