@@ -1,6 +1,8 @@
 Revision history for Plack-Middleware-Statsd
 
 {{$NEXT}}
+  [Tests]
+  - Added more author tests.
 
 v0.8.0    2025-05-13 13:07:16+01:00 Europe/London
   [Security]
